--- a/style.css
+++ b/style.css
@@ -1,9 +1,80 @@
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 * { 
     border: 0; 
     padding: 0; 
+    box-sizing: border-box;
 }
 
+html, body { 
+    height: 100%;
+}
 
 body { 
     background: black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    font-family: 'Krona-one';
+}
+
+
+strong { 
+    color: #30d1f5;
+}
+
+.main { 
+    display: flex ;
+    justify-content: space-between;
+    align-items: center;
+    align-content: space-between;
+    margin: 10%; 
+    gap: 30px; 
+}
+
+
+img { 
+    max-width: 100%;
+
+}
+
+
+h1 { 
+    font-size: 36px;
+    font-family: 'Krona One', sans-serif;
+}
+
+.text-section { 
+    width: 615px;
+    display: flex;
+    flex-direction: column;
+   
+}
+
+p { 
+    font-size: 24px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+}
+
+
+.button { 
+    background: #30d1f5;
+    padding: 20px;
+    border-radius: 16px;
+    text-align: center; 
+    text-decoration: none;
+    color: black; 
+    width: 250px;
+    font-size: 24px;
+    font-family: 'Montserrat', sans-serif;
+
+}
+
+.button-div { 
+    display: flex;
+    justify-content: space-between;
+    font-weight: 600;
+    row-gap: 50px;
 }
